[package]
name = "glory-routing"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-routing/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[badges]
codecov = { repository = "glory-rs/glory", branch = "main", service = "github" }

[lib]
path = "src/lib.rs"


[features]
default = ["web-csr"]
web-csr = ["__single_holder", "glory-core/web-csr", "dep:wasm-bindgen", "dep:web-sys"]
web-ssr = ["glory-core/web-ssr"]
salvo = ["dep:salvo", "glory-core/salvo"]
__single_holder = []

[dependencies]
cfg-if = { workspace = true }
url = { workspace = true }
glory-core = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
multimap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
educe = { workspace = true }
wasm-bindgen = { workspace = true, optional = true}
salvo = {workspace = true, optional = true}
path-slash = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
optional = true
features = [
    "History",
    "HtmlAnchorElement",
    "MouseEvent"
]

[package.metadata.cargo-all-features]
denylist = ["stable"]
skip_feature_sets = [["web-ssr", "web-csr"]]