[package]
name = "glory-tui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Ratatui renderer scaffold for Glory."
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/glory-tui/"
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
glory-core = { workspace = true }
ratatui = { workspace = true }

[lints]
workspace = true
