[package]
name = "file-upload"
version = "0.0.1"
edition = "2024"
publish = false

[features]
web-csr = ["glory/web-csr", "glory/server-fn", "dep:wasm-bindgen"]
web-ssr = ["glory/salvo", "glory/server-fn", "glory-serverfn/salvo", "dep:salvo", "dep:tokio", "dep:tracing-subscriber"]

[dependencies]
glory = { path = "../../crates/glory", default-features = false, features = ["server-fn"] }
glory-serverfn = { path = "../../crates/serverfn" }
salvo = { version = "0.93", default-features = true, optional = true, features = ["serve-static"] }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[package.metadata.glory]
output_name = "file-upload"
site_root = "target/site"
site_pkg_dir = "pkg"
site_addr = "127.0.0.1:8010"
bin_features = ["web-ssr"]
bin_default_features = false
lib_features = ["web-csr"]
lib_default_features = false
