[package]
name = "ssr-simple-salvo"
version = "0.0.1"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[features]
web-csr = ["glory/web-csr"]
web-ssr = ["glory/salvo", "dep:tokio", "dep:salvo", "dep:tracing-subscriber"]

[dependencies]
glory = { path = "../../crates/glory", default-features = false, features = ["routing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage"] }
salvo = { version = "0.63", default-features = true, optional = true, features = ["serve-static"] }
tokio = { version = "1", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[package.metadata.glory]
# The name used by wasm-bindgen/glory-cli for the JS/WASM bundle. Defaults to the crate name
output_name = "ssr-simple-salvo"
# The site root folder is where glory-cli generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site_root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site_pkg_dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style_file = "styles/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: GLORY_ASSETS_DIR.
assets_dir = "assets"
# The IP and port (ex: 127.0.0.1:8000) where the server serves the content. Use it in your server setup.
site_addr = "0.0.0.0:8000"
# The port to use for automatic reload monitoring
reload_port = 8001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end_cmd = "npx playwright test"
end2end_dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browser_query = "defaults"
# Set by glory-cli watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin_features = ["web-ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin_default_features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib_features = ["web-csr"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib_default_features = false
