[package]
name = "todo"
version = "0.0.1"
edition = "2021"


[dependencies]
glory = { path = "../crates/glory", workspace = true, features = ["web-csr"]}
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = ["Storage"] }