[package]
name = "todomvc"
version = "0.0.1"
edition = "2021"

[dependencies]
glory = { path = "../../crates/glory", features = ["web-csr"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = ["Storage"] }